--- a/HyperEngine/HyperEngine.vcxproj
+++ b/HyperEngine/HyperEngine.vcxproj
@@ -11,12 +11,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\HyperEngine\Log.h" />
     <ClInclude Include="src\HyperEngine.h" />
     <ClInclude Include="src\HyperEngine\Application.h" />
     <ClInclude Include="src\HyperEngine\Core.h" />
     <ClInclude Include="src\HyperEngine\EntryPoint.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\HyperEngine\Log.cpp" />
     <ClCompile Include="src\HyperEngine\Application.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -68,6 +70,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>HYPERENGINE_PLATFORM_WINDOWS;HYPERENGINE_BUILD_DLL;</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)HyperEngine\vendor\spdlog\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -82,6 +85,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>HYPERENGINE_PLATFORM_WINDOWS;HYPERENGINE_BUILD_DLL;</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)HyperEngine\vendor\spdlog\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
