--- a/HyperEngine/HyperEngine.vcxproj.filters
+++ b/HyperEngine/HyperEngine.vcxproj.filters
@@ -27,9 +27,15 @@
     <ClInclude Include="src\HyperEngine\EntryPoint.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="src\HyperEngine\Log.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\HyperEngine\Application.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\HyperEngine\Log.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
