--- a/HyperEngine/HyperEngine.vcxproj.filters
+++ b/HyperEngine/HyperEngine.vcxproj.filters
@@ -7,6 +7,12 @@
     <Filter Include="HyperEngine\Events">
       <UniqueIdentifier>{87A39EAF-7387-5F05-DCE7-5958C8EA4987}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Platform">
+      <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\Windows">
+      <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\HyperEngine.h" />
@@ -34,6 +40,12 @@
     <ClInclude Include="src\HyperEngine\Log.h">
       <Filter>HyperEngine</Filter>
     </ClInclude>
+    <ClInclude Include="src\HyperEngine\Window.h">
+      <Filter>HyperEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
+      <Filter>Platform\Windows</Filter>
+    </ClInclude>
     <ClInclude Include="src\hepch.h" />
   </ItemGroup>
   <ItemGroup>
@@ -42,6 +54,9 @@
     </ClCompile>
     <ClCompile Include="src\HyperEngine\Log.cpp">
       <Filter>HyperEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
+      <Filter>Platform\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\hepch.cpp" />
   </ItemGroup>
